syntax = "proto3";

package T.srv.web.api;

option go_package = "web-api/api/web;web";

import "google/api/annotations.proto";

service websrv{
    //用户注册
    rpc Registory(RegistoryReq)returns(RegistoryReply){
        option(google.api.http) = {
            post:"/v1/web/registory",
            body:"*"
        };
    }
    rpc Login(LoginReq)returns(LoginReply){
        option(google.api.http) = {
            post:"/v1/web/login",
            body:"*"
        };
    }



}
message User{
	int64 id = 1;
	string nickname = 2;
	string pwd = 9;
	string avatarUrl = 3;
	string country = 4;
	string province = 5;
	string city = 6;
	string uname = 7;
	int64 status = 8;
}
message RegistoryReq {
    string nickname = 1;
	string pwd = 2;
	string avatarUrl = 3;
	string country = 4;
	string province = 5;
	string city = 6;
	string uname = 7;
}
message RegistoryReply {
    string ok = 1;
	string msg = 2;
}
message LoginReq {
    string nickname = 1;
	string pwd = 2;
}
message LoginReply {
    User userDetail = 1;
	string msg = 2;
	string ok = 3;
}